# archiver_webhook

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTES.md  README.md  docker-compose.yml
.github/workflows/: docker-build.yml  matrix-build.yml
src/: audio.rs  cli.rs  config.rs  db.rs  discord.rs  lib.rs  loghandler.rs  main.rs  soundcloud.rs
