[package]
name = "scarchivebot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
log = "0.4"
env_logger = "0.11"
regex = "1.10"
lazy_static = "1.4"
uuid = { version = "1.6", features = ["v4"] }
