[package]
name = "archiver_webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
log = "0.4"
regex = "1.11.1"
lazy_static = "1.5.0"
uuid = { version = "1.16.0", features = ["v4"] }
simple_logger = "5.0.0"
log4rs = "1.2"
chrono = "0.4"
winapi = { version = "0.3", features = ["wincon"] }
